Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111803

Native QMessageBox on macOS doesn't show check box

    XMLWordPrintable

Details

    • macOS
    • a0313c85a (dev), ec3aac74a (6.5.0), d66d260e7 (6.5)

    Description

      The new macOS native QMessageBox in Qt 6.5 doesn't show the check box set with `setCheckBox`. If the check box isn't compatible with the native dialog, then I would expect it to automatically degrade to the non-native one. It's sort of gross to mix the two in the same app, but it would be better than not showing the check box at all. I also don't want to disable all native dialogs with `Qt::AA_DontUseNativeDialogs`, but a separate option to disable just native QMessageBox would work.

      Attachments

        For Gerrit Dashboard: QTBUG-111803
        # Subject Branch Project Status CR V

        Activity

          People

            vestbo Tor Arne Vestbø
            jasonhaslam Jason Haslam
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes